# NewsFeedGenerator

./: .gitignore  LICENSE  README.md
my_cdk/: cdk.json  package-lock.json  package.json
my_cdk/test/: my_cdk.test.ts
news_feed_generator/: pyproject.toml
news_feed_generator/news_feed_generator/: handler.py
news_feed_generator/news_feed_generator/clients/: post_data_client.py  reddit_client.py  subscription_data_client.py
news_feed_generator/news_feed_generator/dto/: post_dto.py  prompt_dto.py  subscription_dto.py
news_feed_generator/news_feed_generator/services/: analytical_service.py  llm_service.py
news_feed_generator/news_feed_generator/utils/: constants.py  time_conversion.py
