[tool.poetry]
name = "news-feed-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
boto3 = "^1.35.92"
praw = "^7.8.1"
python-dotenv = "^1.0.1"
numpy = "^2.2.1"
botocore-stubs = "^1.35.93"
boto3-stubs = "^1.35.93"
mypy-boto3-bedrock = "^1.35.93"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_reddit = "news_feed_generator.handler:base_reddit_test"
test_ddb = "news_feed_generator.handler:base_ddb_test"